# mocksmith

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_MOCK.md  TESTING.md  pyproject.toml  pyrightconfig.json  test_examples.py
.github/: dependabot.yml
.github/workflows/: auto-release.yml  ci.yml  code-quality.yml  pr-title.yml  publish.yml  release-publish.yml  release.yml  validate-pr-title.yml
examples/: README.md  clean_constraints_example.py  constrained_types_example.py  constraints_example.py  dataclass_example.py  dataclass_mock_example.py  enum_mock_example.py  example.py  ip_address_example.py  numeric_constraints_example.py  pipe_syntax_example.py  pydantic_constraints_example.py  pydantic_example.py  pydantic_mock_example.py  string_constraints_example.py
scripts/: check_consistency.py
src/db_types/: __init__.py  annotations.py  dataclass_integration.py  decorators.py  mock_builder.py  mock_factory.py  pydantic_integration.py
src/db_types/specialized/: __init__.py  contact.py  geographic.py
src/db_types/types/: __init__.py  base.py  binary.py  boolean.py  constraints.py  numeric.py  string.py  temporal.py
src/mocksmith/: __init__.py  annotations.py  mock_factory.py
src/mocksmith/specialized/: __init__.py  web.py
src/mocksmith/types/: numeric.py  string.py
tests/: __init__.py  test_annotation_sql_types.py  test_annotations.py  test_annotations_coverage.py  test_base_coverage.py  test_boolean_binary_types.py  test_constrained_mocks.py  test_constraints.py  test_dataclass_default_validation.py  test_dataclass_integration.py  test_ip_address.py  test_mock_coverage.py  test_mock_enum.py  test_mock_factory.py  test_mock_factory_coverage.py  test_mock_literal.py  test_mock_specialized_types.py  test_mock_string_types.py  test_numeric_alias.py  test_numeric_robustness.py  test_numeric_types.py  test_pipe_union_syntax.py  test_pydantic_custom_parity.py  test_pydantic_integration.py  test_pydantic_types_mock.py  test_real_validation.py  test_sql_types.py  test_string_types.py  test_temporal_types.py  test_type_coverage.py  test_validation_coverage.py
