[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-db-types"
version = "0.1.0"
description = "Specialized database types with validation for Python"
authors = ["Gurmeet Saran <gurmeetx@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["database", "types", "validation", "sql", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{include = "db_types", from = "src"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/gurmeetsaran/python-db-types"
"Documentation" = "https://python-db-types.readthedocs.io"
"Repository" = "https://github.com/gurmeetsaran/python-db-types"
"Bug Tracker" = "https://github.com/gurmeetsaran/python-db-types/issues"
"Changelog" = "https://github.com/gurmeetsaran/python-db-types/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = {version = ">=4.0.0", python = "<3.9"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.2.1"
mypy = "^1.0.0"
ruff = "^0.11.13"
black = "^25.1.0"
isort = "^6.0.1"
coverage = {extras = ["toml"], version = "^7.0"}
pre-commit = "^4.2.0"
pyright = "^1.1.363"

[tool.poetry.extras]
pydantic = ["pydantic"]

[tool.poetry.group.pydantic.dependencies]
pydantic = "^2.0.0"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["db_types"]

[tool.ruff.lint.per-file-ignores]
"src/db_types/annotations.py" = ["N802"]  # Allow PascalCase function names for clean API

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["**/__pycache__", "**/.pytest_cache", "venv", ".venv", "tests", "examples"]
reportInvalidTypeForm = false
reportArgumentType = false
reportAssignmentType = false
reportConstantRedefinition = false
reportAttributeAccessIssue = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/db_types"]
omit = ["*/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 59

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["db_types"]
skip_gitignore = true
